Basic logic implementation

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,8 +18,15 @@ validate-compute-configuration:
   only:
     changes:
       - compute/**/*
+  image: python:3.11
+  before_script:
+    - apt-get update && apt-get install -y curl
+    - curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python -
+    - source $HOME/.poetry/env
   script:
-    - echo "Ded, validate compute configuration"
+    - poetry install
+    - poetry run python src/main.py
+
 
 create-compute-instance:
   stage: compute
