--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,9 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
+httpx = "^0.27.0"
+pydantic = "^2.7.0"
+pyyaml = "^6.0.1"
 
 
 [build-system]
