Basic logic implementation

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,7 +25,7 @@ validate-compute-configuration:
     - source $HOME/.poetry/env
   script:
     - poetry install
-    - poetry run python src/main.py
+    - poetry run python -m src
 
 
 create-compute-instance:
