Basic logic implementation

--- a/compute/some-project/awesome-compute-instance.yaml
+++ b/compute/some-project/awesome-compute-instance.yaml
@@ -1,4 +1,4 @@
-# TODO Ded, Dasha come up with .yaml conf structure
+# TODO Ded, Dasha come up with .yaml config structure
 name: awesome-compute
 os: ubuntu_20_04
 preset: c1r1d15
