--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ python = "^3.12"
 httpx = "^0.27.0"
 pydantic = "^2.7.0"
 pyyaml = "^6.0.1"
+click = "^8.1.7"
+sentry-sdk = "^2.0.1"
 
 
 [build-system]
