--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,18 +1,30 @@
 stages:
-  - test
+  - build
   - validate-config
-  - create-compute
+  - provision
   - post-scripts
 
-test-on-code-change:
-  stage: test
+build-on-code-change:
+  stage: build
+  image: docker:dind
+  services:
+    - docker:dind
   only:
     changes:
       - src/**/*
       - pyproject.toml
       - poetry.lock
+      - Dockerfile
+      - ./*.py
+    refs:
+      - main
   script:
-    - echo "Barada, implement tests"
+    - docker info
+    - docker login $CI_REGISTRY -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD
+    - export VERSION_TAG=$(if [ "$CI_COMMIT_TAG" != "" ]; then echo "$CI_COMMIT_TAG"; else echo "$CI_COMMIT_REF_NAME-${CI_COMMIT_SHORT_SHA}"; fi)
+    - docker build -t $IMAGE_NAME:$VERSION_TAG .
+    - docker push $IMAGE_NAME:$VERSION_TAG
+    - if [ "$CI_COMMIT_TAG" != "" ]; then docker tag $IMAGE_NAME:$VERSION_TAG $IMAGE_NAME:latest; docker push $IMAGE_NAME:latest; fi
 
 
 validate-compute-configuration:
@@ -30,9 +42,9 @@ validate-compute-configuration:
     - poetry run python cli.py validate -f $file_name -c $change_type
 
 
-create-compute-instance:
+provision-compute-instance:
   image: python:3.12
-  stage: create-compute
+  stage: provision
   only:
     changes:
       - compute/**/*
