--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,7 +18,7 @@ build-on-code-change:
       - pyproject.toml
       - poetry.lock
       - Dockerfile
-      - ./*.py
+      - .gitlab-ci.yml
     refs:
       - main
   script:
