--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,22 +27,18 @@ build-on-code-change:
     - export VERSION_TAG=$(if [ "$CI_COMMIT_TAG" != "" ]; then echo "$CI_COMMIT_TAG"; else echo "$CI_COMMIT_REF_NAME-${CI_COMMIT_SHORT_SHA}"; fi)
     - docker build -t $IMAGE_NAME:$VERSION_TAG .
     - docker push $IMAGE_NAME:$VERSION_TAG
-    - if [ "$CI_COMMIT_TAG" != "" ]; then docker tag $IMAGE_NAME:$VERSION_TAG $IMAGE_NAME:latest; docker push $IMAGE_NAME:latest; fi
-
+    - docker push $IMAGE_NAME:latest
 
 validate-compute-configuration:
-  image: python:3.12
+  image: $IMAGE_NAME:latest
   stage: validate-config
   only:
     changes:
       - compute/**/*
   before_script:
-    - pip install --upgrade pip
-    - pip install poetry
-    - poetry install -v
     - source ./find_changed_config.sh
   script:
-    - poetry run python cli.py validate -f $file_name -c $change_type
+    - validate -f $file_name -c $change_type
 
 
 provision-compute-instance:
