--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,7 +25,7 @@ build-on-code-change:
     - docker info
     - docker login $CI_REGISTRY -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD
     - export VERSION_TAG=$(if [ "$CI_COMMIT_TAG" != "" ]; then echo "$CI_COMMIT_TAG"; else echo "$CI_COMMIT_REF_NAME-${CI_COMMIT_SHORT_SHA}"; fi)
-    - docker build -t $IMAGE_NAME:$VERSION_TAG .
+    - docker build -t $IMAGE_NAME:$VERSION_TAG -t $IMAGE_NAME:latest .
     - docker push $IMAGE_NAME:$VERSION_TAG
     - docker push $IMAGE_NAME:latest
 
