--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ pydantic = "^2.7.0"
 pyyaml = "^6.0.1"
 click = "^8.1.7"
 sentry-sdk = "^2.0.1"
+paramiko = "^3.4.0"
 
 [build-system]
 requires = ["poetry-core"]
