--- a/requirements.txt
+++ b/requirements.txt
@@ -8,13 +8,21 @@ annotated-types==0.6.0
     # via pydantic
 anyio==4.3.0
     # via httpx
+bcrypt==4.1.2
+    # via paramiko
 certifi==2024.2.2
     # via
     #   httpcore
     #   httpx
     #   sentry-sdk
+cffi==1.16.0
+    # via
+    #   cryptography
+    #   pynacl
 click==8.1.7
     # via pipeformer (pyproject.toml)
+cryptography==42.0.5
+    # via paramiko
 h11==0.14.0
     # via httpcore
 httpcore==1.0.5
@@ -25,10 +33,16 @@ idna==3.7
     # via
     #   anyio
     #   httpx
+paramiko==3.4.0
+    # via pipeformer (pyproject.toml)
+pycparser==2.22
+    # via cffi
 pydantic==2.7.1
     # via pipeformer (pyproject.toml)
 pydantic-core==2.18.2
     # via pydantic
+pynacl==1.5.0
+    # via paramiko
 pyyaml==6.0.1
     # via pipeformer (pyproject.toml)
 sentry-sdk==2.0.1
