--- a/compute/sna/awesome.yaml
+++ b/compute/sna/awesome.yaml
@@ -6,9 +6,6 @@ flavor:
   RAM: 1GB
   region: SPB-1
 playbooks:
-  - name: playbook1
-    link: https://google.com
-    vars: [ ]
-  - name: playbook2
-    link: https://google.com
+  - name: Install docker
+    link: https://raw.githubusercontent.com/wensiet/automata/main/playbooks/packages/install_docker.yaml
     vars: [ ]
