--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,10 @@
 #
 annotated-types==0.6.0
     # via pydantic
+ansible==9.5.1
+    # via pipeformer (pyproject.toml)
+ansible-core==2.16.6
+    # via ansible
 anyio==4.3.0
     # via httpx
 bcrypt==4.1.2
@@ -22,7 +26,9 @@ cffi==1.16.0
 click==8.1.7
     # via pipeformer (pyproject.toml)
 cryptography==42.0.5
-    # via paramiko
+    # via
+    #   ansible-core
+    #   paramiko
 h11==0.14.0
     # via httpcore
 httpcore==1.0.5
@@ -33,6 +39,12 @@ idna==3.7
     # via
     #   anyio
     #   httpx
+jinja2==3.1.3
+    # via ansible-core
+markupsafe==2.1.5
+    # via jinja2
+packaging==24.0
+    # via ansible-core
 paramiko==3.4.0
     # via pipeformer (pyproject.toml)
 pycparser==2.22
@@ -44,7 +56,11 @@ pydantic-core==2.18.2
 pynacl==1.5.0
     # via paramiko
 pyyaml==6.0.1
-    # via pipeformer (pyproject.toml)
+    # via
+    #   ansible-core
+    #   pipeformer (pyproject.toml)
+resolvelib==1.0.1
+    # via ansible-core
 sentry-sdk==2.0.1
     # via pipeformer (pyproject.toml)
 sniffio==1.3.1
