--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -64,6 +64,7 @@ apply-compute-post-scripts:
       - main
   before_script:
     - source ./find_changed_config.sh
+    - mkdir -p .ssh
     - echo "$SSH_SERVICE" > .ssh/service
   script:
     - python cli.py provision -f $file_name -c $change_type
