--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ click = "^8.1.7"
 sentry-sdk = "^2.0.1"
 paramiko = "^3.4.0"
 ansible = "^9.5.1"
+gitpython = "^3.1.43"
 
 [build-system]
 requires = ["poetry-core"]
