--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,10 @@ cryptography==42.0.5
     # via
     #   ansible-core
     #   paramiko
+gitdb==4.0.11
+    # via gitpython
+gitpython==3.1.43
+    # via pipeformer (pyproject.toml)
 h11==0.14.0
     # via httpcore
 httpcore==1.0.5
@@ -63,6 +67,8 @@ resolvelib==1.0.1
     # via ansible-core
 sentry-sdk==2.0.1
     # via pipeformer (pyproject.toml)
+smmap==5.0.1
+    # via gitdb
 sniffio==1.3.1
     # via
     #   anyio
