--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,7 +37,7 @@ validate-configuration:
     changes:
       - compute/**/*
   script:
-    - python cli.py --old-sha $CI_COMMIT_BEFORE_SHA --new-sha $CI_COMMIT_SHA validate
+    - python cli.py --old-sha $CI_COMMIT_SHA --new-sha main validate
 
 
 provision-compute:
@@ -49,7 +49,7 @@ provision-compute:
     refs:
       - main
   script:
-    - python cli.py --old-sha $CI_COMMIT_BEFORE_SHA --new-sha $CI_COMMIT_SHA provision
+    - python cli.py --old-sha $CI_COMMIT_SHA --new-sha main provision
 
 apply-playbooks:
   image: $IMAGE_NAME:latest
@@ -64,4 +64,4 @@ apply-playbooks:
     - echo "$SSH_SERVICE" > ~/.ssh/id_rsa
     - chmod 600 ~/.ssh/id_rsa
   script:
-    - python cli.py --old-sha $CI_COMMIT_BEFORE_SHA --new-sha $CI_COMMIT_SHA playbooks
+    - python cli.py --old-sha $CI_COMMIT_SHA --new-sha main playbooks
