--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,8 +37,12 @@ validate-configuration:
     changes:
       - compute/**/*
   script:
-    - if [ "$CI_COMMIT_BEFORE_SHA" = "0000000000000000000000000000000000000000" ]; then CI_COMMIT_BEFORE_SHA="$CI_MERGE_REQUEST_DIFF_BASE_SHA"; fi
-    - python cli.py --old-sha $CI_COMMIT_SHA --new-sha $CI_COMMIT_BEFORE_SHA validate
+    - if [ "$CI_COMMIT_BEFORE_SHA" = "0000000000000000000000000000000000000000" ]; then
+      OLD_SHA=$(git rev-parse HEAD^);
+      else
+      OLD_SHA=$CI_COMMIT_BEFORE_SHA;
+      fi;
+    - python cli.py --old-sha $CI_COMMIT_SHA --new-sha $OLD_SHA validate
 
 
 provision-compute:
