--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,14 +15,13 @@ build-on-code-change:
   image: docker:dind
   services:
     - docker:dind
-  only:
-    changes:
-      - src/**/*
-      - tests/**/*
-      - pyproject.toml
-      - poetry.lock
-      - Dockerfile
-      - .gitlab-ci.yml
+  rules:
+    - changes:
+        - src/**/*
+        - tests/**/*
+        - Dockerfile
+        - .gitlab-ci.yml
+        - requirements.txt
   script:
     - docker info
     - docker login $CI_REGISTRY -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD
@@ -32,14 +31,13 @@ build-on-code-change:
 run-unit-test:
   image: $IMAGE_NAME:$CI_COMMIT_SHORT_SHA
   stage: test
-  only:
-    changes:
-      - src/**/*
-      - tests/**/*
-      - pyproject.toml
-      - poetry.lock
-      - Dockerfile
-      - .gitlab-ci.yml
+  rules:
+    - changes:
+        - src/**/*
+        - tests/**/*
+        - Dockerfile
+        - .gitlab-ci.yml
+        - requirements.txt
   script:
     - python -m pytest
 
@@ -48,16 +46,14 @@ release:
   image: docker:dind
   services:
     - docker:dind
-  only:
-    changes:
-      - src/**/*
-      - tests/**/*
-      - pyproject.toml
-      - poetry.lock
-      - Dockerfile
-      - .gitlab-ci.yml
-    refs:
-      - main
+  rules:
+    - changes:
+        - src/**/*
+        - tests/**/*
+        - Dockerfile
+        - .gitlab-ci.yml
+        - requirements.txt
+    - if: $CI_COMMIT_BRANCH == "main"
   script:
     - docker info
     - docker login $CI_REGISTRY -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD
@@ -68,9 +64,9 @@ release:
 validate-configuration:
   image: $IMAGE_NAME:latest
   stage: validate
-  only:
-    changes:
-      - compute/**/*
+  rules:
+    - changes:
+        - compute/**/*
   script:
     - if [ "$CI_COMMIT_BEFORE_SHA" = "0000000000000000000000000000000000000000" ]; then
       OLD_SHA=$(git rev-parse HEAD^);
@@ -83,11 +79,10 @@ validate-configuration:
 provision-compute:
   image: $IMAGE_NAME:latest
   stage: provision
-  only:
-    changes:
-      - compute/**/*
-    refs:
-      - main
+  rules:
+    - changes:
+        - compute/**/*
+    - if: $CI_COMMIT_BRANCH == "main"
   script:
     - python cli.py --old-sha $CI_COMMIT_SHA --new-sha $CI_COMMIT_BEFORE_SHA provision
 
