--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -53,8 +53,9 @@ release:
         - Dockerfile
         - .gitlab-ci.yml
         - requirements.txt
-      when: on_success
-    - if: $CI_COMMIT_BRANCH == "main"
+  only:
+    refs:
+      - main
   script:
     - docker info
     - docker login $CI_REGISTRY -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD
@@ -83,8 +84,9 @@ provision-compute:
   rules:
     - changes:
         - compute/**/*
-      when: on_success
-    - if: $CI_COMMIT_BRANCH == "main"
+  only:
+    refs:
+      - main
   script:
     - python cli.py --old-sha $CI_COMMIT_SHA --new-sha $CI_COMMIT_BEFORE_SHA provision
 
@@ -94,8 +96,9 @@ apply-playbooks:
   rules:
     - changes:
         - compute/**/*
-      when: on_success
-    - if: $CI_COMMIT_BRANCH == "main"
+  only:
+    refs:
+      - main
   before_script:
     - mkdir -p ~/.ssh
     - echo "$SSH_SERVICE" > ~/.ssh/id_rsa
